...
                    // MARK: Header
                    AppHeaderBar {
                        if showFromRead {
                            CloseHeaderButton {
                                showFromRead = false
                            }
                            .accessibilityIdentifier("select-close")
                        } else {
                            MenuButtonView()
                                .environmentObject(settingsManager)
                        }
                    } center: {
                        Text("page.select.title".localized)
...
                selectedBiblePartIndex = selectedIndex
            }
            scrollToTop.toggle()
        }
        .padding(.vertical, 15)
        .font(.title)
        .accessibilityIdentifier("testament-selector")
    }
    
    // MARK: Chapter list
    @ViewBuilder fileprivate func viewChaptersList(_ book: Components.Schemas.TranslationBookModel) -> some View {
        LazyVGrid(columns: Array(repeating: GridItem(.flexible(), spacing: 15), count: 6), spacing: 15) {
            ForEach(1...book.chapters_count, id: \.self) { chapter_number in
...
